force-app/main/default/objects/Integration_Task__c/Integration_Task__c.object-meta.xml
<CustomObject>
    <description>To track the integration items so that SAP licensed users can execute them. Also used for error handling, tracking integration progress and reporting.</description>
    <label>Integration Task</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>