force-app/main/default/objects/Integration_Task__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description>SF ID of the record to integrate.</description>
    <label>ParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>