force-app/main/default/objects/Integration_Task__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>SF object name of the record to integrate.</description>
    <label>SObject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project__c</fullName>
            </value>
            <value>
                <fullName>Artefact__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>