force-app/main/default/objects/Integration_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreateCustomer</fullName>
            </value>
            <value>
                <fullName>GetCustomer</fullName>
            </value>
            <value>
                <fullName>CreateMasterNoti</fullName>
            </value>
            <value>
                <fullName>CreateWork</fullName>
            </value>
            <value>
                <fullName>UpdateCM</fullName>
            </value>
            <value>
                <fullName>CreateArtefact</fullName>
            </value>
            <value>
                <fullName>GetCM</fullName>
            </value>
            <value>
                <fullName>GetConstNoti</fullName>
            </value>
            <value>
                <fullName>GetConstWO</fullName>
            </value>
            <value>
                <fullName>GetInvoice</fullName>
            </value>
            <value>
                <fullName>GetArtefact</fullName>
            </value>
            <value>
                <fullName>GetCMArtefact</fullName>
            </value>
            <value>
                <fullName>RequestInvoice</fullName>
            </value>
            <value>
                <fullName>postPaymentWestPac</fullName>
            </value>
            <value>
                <fullName>getFirmOfferForElecForm</fullName>
            </value>
            <value>
                <fullName>getInverters</fullName>
            </value>
            <value>
                <fullName>createDERApplication</fullName>
            </value>
            <value>
                <fullName>validateNMIandMeterNum</fullName>
            </value>
            <value>
                <fullName>getDERApplicationDetails</fullName>
            </value>
            <value>
                <fullName>updateDERApplication</fullName>
            </value>
            <value>
                <fullName>toPopulateInverter</fullName>
            </value>
            <value>
                <fullName>toMergeInverterLists</fullName>
            </value>
            <value>
                <fullName>insertIntoCECInvertersMDT</fullName>
            </value>
            <value>
                <fullName>updateAndDeployMetadata</fullName>
            </value>
            <value>
                <fullName>invokeMethod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>