force-app/main/default/objects/Integration_Task__c/recordTypes/Artefact.recordType-meta.xml
<RecordType>
    <fullName>Artefact</fullName>
    <active>true</active>
    <label>Artefact</label>
</RecordType>