force-app/main/default/objects/Integration_Task__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <label>Project</label>
</RecordType>