force-app/main/default/objects/Integration_Task__c/recordTypes/WorkOrder.recordType-meta.xml
<RecordType>
    <fullName>WorkOrder</fullName>
    <active>true</active>
    <label>WorkOrder</label>
</RecordType>