force-app/main/default/objects/Integration_Task__c/listViews/Integration_Task_Failed.listView-meta.xml
<ListView>
    <fullName>Integration_Task_Failed</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>ParentId__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Operation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>EC Integration Task In Progress</label>
</ListView>